--- a/scss/_mediaQueries.scss
+++ b/scss/_mediaQueries.scss
@@ -121,16 +121,20 @@
     ************************************/
     .products {
         display: grid;
-        grid-template-rows: 10% 90%;
-        height: auto;
+        grid-template-rows: 1fr 4fr;
+        height: 100%;
         &__imgBox {
             display: grid;
             grid-template-columns: 2fr 2fr;
-            grid-template-rows: 2fr 2fr 2fr 1fr;
+            grid-template-rows: 2fr 2fr 2fr;
+            margin-bottom: 3em;
             row-gap: 15px;
+            .imgBox {
+                padding-bottom: 2.5em;
+            }
             .imgBox img {
-                width: 250px;
-                height: 200px;
+                width: 300px;
+                height: 250px;
             }
         }
     }
